--- a/style.css
+++ b/style.css
@@ -37,39 +37,85 @@ html, body {
 
 header {
     width: 100%;
+    height: 8rem;
 
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    align-items: center;
 
     position: absolute;
 }
 
-h3 {
-    margin: 0;
-    font-size: 2.5em;
-    color: var(--white);
+header > div:first-child {
+    width: 15rem;
+    margin-left: 6%;
+
 }
 
-header > div:first-child {
-    margin: 10% 5%;
+header img {
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin-top: 3px;
+}
+
+[type="checkbox"] {
+    display: none;
+}
+
+.menu-toggle {
+    width: 30px;
+    margin-right: 6%;
+
     display: flex;
     flex-flow: column nowrap;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
 }
 
-.nav-ham {
-    margin: 10% 5%;
-}
-
-.nav-ham__line {
+.menu-toggle__line {
     width: 30px;
     height: 2px;
-
-    margin: 6px;
+    position: relative;
 
     background-color: var(--white);
+
+    transition: transform .3s, top .2s;
+}
+
+.menu-toggle__line::before,
+.menu-toggle__line::after {
+    width: 30px;
+    height: 2px;
+    display: block;
+    position: absolute;
+    content: "";
+
+    background-color: var(--white);
+    transition: transform .3s, top .2s;
+}
+
+.menu-toggle__line::before {
+    top: -8px;
+}
+
+.menu-toggle__line::after {
+    top: 8px;
+}
+
+[type="checkbox"]:checked + .menu-toggle > label > .menu-toggle__line {
+    transform: rotate(-45deg);
+}
+
+[type="checkbox"]:checked + .menu-toggle > label > .menu-toggle__line::before {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+[type="checkbox"]:checked + .menu-toggle > label > .menu-toggle__line::after {
+    top: 0;
+    transform: rotate(90deg);
 }
 
 .hero {
@@ -84,7 +130,7 @@ header > div:first-child {
 h1 {
     position: absolute;
     padding: 6% 8%;
-    margin: 5%;
+    margin: 10%;
 
     text-transform: uppercase;
     font-family: 'Josefin Sans', sans-serif;
