--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ html, body {
 header {
     width: 100%;
     height: 8rem;
+    padding: 0 6%;
 
     display: flex;
     flex-flow: row nowrap;
@@ -91,8 +92,6 @@ header {
 
 header > div:first-child {
     width: 15rem;
-    margin-left: 6%;
-
 }
 
 header img {
@@ -108,7 +107,6 @@ header img {
 
 .menu-toggle {
     width: 30px;
-    margin-right: 6%;
 
     display: flex;
     flex-flow: column nowrap;
@@ -198,14 +196,19 @@ h4 {
 }
 
 img {
-    padding: 5%;
+    padding: 5% 5% 0 5%;
     max-width: 100%;
 }
 
 p {
+    padding: 0 10%;
+    margin: 0;
+    color: var(--dark-gray);
+
     text-align: center;
     font-family: 'Alata', sans-serif;
     font-weight: 400;
+    font-size: 15px;
 }
 
 section {
@@ -215,12 +218,85 @@ section {
     align-items: center;
 }
 
+.margin-top {
+    margin-top: 7rem;
+}
+
+.our-creations > div {
+    position: relative;
+}
+
+.our-creations > div::before {
+    width: 90%;
+    height: 86%;
+    margin: 5%;
+    position: absolute;
+    content: "";
+
+    opacity: .5;
+    background: linear-gradient(to right, var(--black) 20%, hsla(0, 0%, 0%, 0) 80%);
+}
+
+h4 {
+    position: absolute;
+    bottom: 15%;
+    margin: 0 0 0 10%;
+
+    font-size: 2.25em;
+
+    color: var(--white);
+}
+
+button {
+    width: 16rem;
+    height: 4rem;
+    margin: 9%;
+
+    text-transform: uppercase;
+    font-family: 'Alata', sans-serif;
+    font-weight: 400;
+    letter-spacing: 4px;
+    font-size: 15px;
+
+    color: var(--black);
+    background-color: var(--white);
+
+    border: solid 1px var(--black);
+}
+
 footer {
     background-color: black;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer > img {
+    width: 18rem;
 }
 
 footer a {
     color: var(--white);
+}
+
+footer > nav {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    font-size: 15px;
+    font-family: 'Alata', sans-serif;
+    font-weight: 400;
+}
+
+.social-media {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 
