--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header {
 }
 
 header > div:first-child {
-    width: 15rem;
+    width: 16rem;
 }
 
 header img {
@@ -295,9 +295,13 @@ footer {
     align-items: center;
 }
 
-footer > img {
-    margin: 3rem 0 1rem;
-    width: 18rem;
+footer > div {
+    width: 16rem;
+}
+
+footer > div img {
+    margin: 5rem 0 1rem;
+    width: 100%;
 }
 
 footer a {
@@ -320,11 +324,19 @@ footer > nav a {
     padding: 1rem;
 }
 
+.footer-nav {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
 .social-media {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
+
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 .social-media a {
@@ -387,12 +399,39 @@ footer > p {
     }
 }
 
-@media all and (min-width: 1440px) {
+@media all and (min-width: 1439px) {
 
     h1 {
         margin: 7rem 0 0 6%;
         max-width: 720px;
         font-size: 7em;
+    }
+
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    footer > div img {
+        margin: 4rem 0 2rem 10rem;
+    }
+
+    .footer-nav {
+        margin: 2rem 0 4rem 10rem;
+        padding: 0;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+    }
+
+    .social-media {
+        margin: 4rem 10rem 2rem 0rem;
+        justify-content: flex-end;
+    }
+
+    .copyright {
+        margin: 0 10rem 4rem 0;
+        text-align: right;
     }
 
 }
