--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@ button {
 
     color: var(--black);
     background-color: var(--white);
+    cursor: pointer;
 
     border: solid 1px var(--black);
 
@@ -391,6 +392,79 @@ footer > p {
     padding: 1rem;
 }
 
+footer nav > div{
+    display: inline-block;
+    position: relative;
+}
+
+footer nav a::after {
+    display: inline-block;
+    content: "";
+
+    position: absolute;
+    top: 140%;
+    left: calc(50% - 1.5rem);
+
+    background-color: hsla(0, 0%, 0%, 0);
+
+    transition: all .5s;
+
+}
+
+footer nav a:hover::after {
+    display: inline-block;
+    width: 3rem;
+    height: 2px;
+    content: "";
+
+    position: absolute;
+    top: 140%;
+    left: calc(50% - 1.5rem);
+
+    background-color: var(--white);
+
+    transition: all .5s;
+}
+
+.social-media img {
+    height: 2.5rem;
+}
+
+.social-media > div{
+    display: inline-block;
+    position: relative;
+}
+
+.social-media a::after {
+    display: inline-block;
+    content: "";
+
+    position: absolute;
+    top: 4rem;
+    left: calc(50% - 1.5rem);
+
+    background-color: hsla(0, 0%, 0%, 0);
+
+    transition: all .5s;
+
+}
+
+.social-media a:hover::after {
+    display: inline-block;
+    width: 3rem;
+    height: 2px;
+    content: "";
+
+    position: absolute;
+    top: 4rem;
+    left: calc(50% - 1.5rem);
+
+    background-color: var(--white);
+
+    transition: all .5s;
+}
+
+
 /* end of body styles */
 
 /* responsive design */
@@ -404,6 +478,10 @@ footer > p {
     h1 {
         margin: 5rem 0 0 6%;
         max-width: 380px;
+    }
+
+    .vr-section p {
+        width: 80rem;
     }
 
 
@@ -466,8 +544,8 @@ footer > p {
     }
 
     .footer-nav {
-        margin: 2rem 0 4rem 10rem;
-        padding: 0;
+        margin: 0rem 0 4rem 10rem;
+        padding: 10px 0;
         display: flex;
         flex-flow: row nowrap;
         justify-content: flex-start;
@@ -539,6 +617,8 @@ footer > p {
     .our-creations button {
         grid-row: 1/2;
         grid-column: 4/5;
+
+        justify-self: end;
     }
 
     .our-creations h2 {
@@ -555,7 +635,7 @@ footer > p {
     }
 
     .our-creations div:hover::before {
-        background: hsla(0, 100%, 100%, 80);
+        background: hsla(0, 100%, 100%, 0.975);
 
         transition: all .5s;
     }
